calc.css
/* @font-face {
  font-family: 'seven-segment';
  src: url('./Seven\ Segment.ttf') format('ttf');
  font-weight: normal;
  font-style: normal;
} */



html {
    box-sizing: border-box;
    font-family:'Courier New', Courier, monospace;
}
*, *::before, *::after{
    box-sizing: inherit;
}

body {
    background-color: rgb(61, 36, 22);
}

h1 {
    width: 100px;
    color: white;
    position: absolute;
    top: 35vh;
    left: 55vw;
}

.container {
    user-select: none;
    cursor: default;
    position: absolute;
    top: 25vh;
    left: 40vw;

    border: 2px solid rgb(23, 47, 34);
    border-top: 2px solid rgb(34, 59, 43);
    border-bottom: 8px solid rgb(33, 33, 33);
    border-radius: 10px;
    background-color: hsl(155, 53%, 32%);
    width: 205px;
    padding: 1em;
    text-align: center;
    /*box-shadow: [inset] [h-offset] [v-offset] [blur-radius] [spread-radius] [color]; */
    box-shadow: 0 10px 2px 2px black;
}

.display {
    font: 1.8em "Seven Segment", sans-serif;
    text-shadow: 0 0 5px white;
    padding: 0.5em;
    text-align: right;
    box-shadow: inset -1px 3px 2px 2px rgb(12, 57, 153);
    height: 50px;
    border-radius: 5px;
    width: 100%;
    background-color: rgb(0, 140, 255);
    color: white;
    transition: background-color 1s, color 1s, text-shadow 1s, box-shadow 1s;
}
.display.turned-off{
    background-color: hsl(50, 25%, 37%);
    color: black;
    text-shadow: -2px 2px 1px rgba(0, 0, 0, 0.394);
    box-shadow: inset -1px 3px 2px 2px rgb(53, 53, 53);
}
.glowbox {
    box-shadow: 0 0 15px 2px rgb(84, 84, 245);
    transition: box-shadow 1s;
}
.glowbox.turned-off{
    box-shadow: none;
}

.keys {
    display: flex;
    gap: 0.5em;
    justify-content: space-between;
}

.nums {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-content: flex-end;
    width: 120px;
    flex: none;
}

.operators {
    display: flex;
    flex-direction: column;
}

button{
    box-shadow: 0 3px 2px 2px black;
    border-radius: 5px;
    border-top: 3px solid rgb(38, 67, 94);
    border-bottom: 4px solid rgb(20, 20, 20);
    flex: none;
    width: 40px;
    height: 40px;
    background-color: rgb(41, 38, 38);
    color: white;
    transition: border-top 1s;
}
button:active, button.active {
    background-color: rgb(29, 25, 25);
    border-style: inset;
    
}
button.turned-off {
    border-top: 3px solid rgb(50, 50, 50);
    
}


.util-keys {
    display: flex;
    margin: 0.2em 0 0 0;
    justify-content: left;
    align-items: center;
}
.util-keys #delete {
    border-top-left-radius: 10px;
}
.util-keys p {
    font-size: 0.4em;
    color: rgb(255, 255, 255);
    margin: 0 2px 0 auto;
}
.util-keys button{
    color:rgb(235, 124, 21);
    height: 22px;
}

.util-keys #led {
    color: rgb(0, 55, 255);
}

